# Gritera_GenAI_Kurs_Analytics_and_Code_Grunnlegende_Hands_On_repo

./: .gitignore  .user.yml  CLAUDE.md  README.md  dbt_project.yml  profiles.yml  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
dashboard/.evidence/customization/: .profile.json
dashboard/pages/: dokumentasjon.md  index.md  klager.md  kunder.md  produkter.md
dashboard/sources/kurs/: connection.yaml  klager_detalj.sql  mart_complaint_summary.sql  raw_order_items.sql  stg_customers.sql  stg_orders.sql  stg_products.sql
docs/: oppgave_b_buggy_model_speaker_notes.md
models/: sources.yml
models/exercises/: buggy_model.sql
models/marts/: mart_complaint_summary.sql  mart_complaint_summary.yml
models/marts/core/: _core__models.yml  dim_customer.sql  dim_date.sql  dim_product.sql  fct_order_items.sql  fct_orders.sql
models/staging/: stg_complaints.sql  stg_complaints.yml  stg_customers.sql  stg_customers.yml  stg_orders.sql  stg_orders.yml  stg_products.sql  stg_products.yml
powerbi/: README.md  STANDARDS.md  build_model_bim.py  build_pbip.py  build_polished_report.py  build_report.py  export_marts_to_csv.py  validate_pbip.py
powerbi/SalesAnalytics.Report/: .platform
powerbi/SalesAnalytics.Report/.pbi/: localSettings.json
powerbi/SalesAnalytics.Report/definition/: report.json
powerbi/SalesAnalytics.SemanticModel/: .platform
powerbi/data/: dim_customer.csv  dim_date.csv  dim_product.csv  fct_order_items.csv  fct_orders.csv
seeds/: raw_complaints.csv  raw_customers.csv  raw_order_items.csv  raw_orders.csv  raw_products.csv
(+850 files in other folders)
